--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+  --text: #0f172a;
+  --primary: #3b82f6;
+  --text-secondary: #334155;
+  --primary-light: #eff6ff;
+  --bg: #f8fafc;
+  --borders: #94a3b8;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #f8fafc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  overflow-y: scroll;
+  font-family: Arial, Helvetica, sans-serif;
+  color: var(--text);
+}
+.todo-item {
+  border: 2px solid #94a3b8;
+  width: 22.75px;
+  height: 22.75px;
+  border-radius: 50%;
+  transition: 300ms;
+  cursor: pointer;
+}
+.todo-item:hover {
+  background-color: #eff6ff;
+}
+
+.button-delete {
+  transition: 300ms all;
+}
+.button-delete:hover {
+  transform: scale(1.2);
 }
