--- a/src/index.css
+++ b/src/index.css
@@ -13,13 +13,10 @@
 
 body {
   background-color: #f8fafc;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
   overflow-y: scroll;
   font-family: Arial, Helvetica, sans-serif;
   color: var(--text);
+  margin: 50px 200px;
 }
 .todo-item {
   border: 2px solid #94a3b8;
@@ -34,8 +31,24 @@ body {
 }
 
 .button-delete {
-  transition: 300ms all;
+  transition: transform 0.3s ease;
 }
 .button-delete:hover {
-  transform: scale(1.2);
+  transform: scale(1.2) rotate(180deg);
+}
+
+@media screen and (max-width: 1400px) {
+  body {
+    margin: 30px 100px;
+  }
+}
+@media screen and (max-width: 1000px) {
+  body {
+    margin: 0 50px;
+  }
+}
+@media screen and (max-width: 600px) {
+  body {
+    margin: 0 20px;
+  }
 }
