--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,10 @@
 }
 
 body {
-  background-color: #f8fafc;
+  /* background-color: #f8fafc; */
   overflow-y: scroll;
   font-family: Arial, Helvetica, sans-serif;
-  color: var(--text);
+  /* color: var(--text); */
   margin: 50px 200px;
 }
 .todo-item {
@@ -52,3 +52,4 @@ body {
     margin: 0 20px;
   }
 }
+
