Loading and error state added

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 }
 
 body {
-  /* background-color: #f8fafc; */
+  background-color: #f8fafc;
   overflow-y: scroll;
   font-family: Arial, Helvetica, sans-serif;
   /* color: var(--text); */
